Fix alignment.

--- a/web/src/styles/authentik/components/Login/login.css
+++ b/web/src/styles/authentik/components/Login/login.css
@@ -132,10 +132,6 @@
 
 /* #region Footer */
 
-.pf-c-login__main-footer {
-    display: block;
-}
-
 .pf-c-login__main-footer-band {
     @media (max-width: 35rem) or (max-height: 17.5rem) {
         --pf-c-login__main-footer-band--BackgroundColor: transparent !important;
